--- a/Assignment-1/index.html
+++ b/Assignment-1/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>
-    This is an example of scatterplot for 10000 random points.
+    This is an example of scatterplot for 1000000 random points.
 </p>
 
 <div id="scatterplot"></div>
@@ -25,10 +25,9 @@
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
     var x = d3.scaleLinear().domain([0, 1]).range([0, vp.width]);
-    var y = d3.scaleLinear().domain([0, 1])
-        .range([200, vp.height]);
+    var y = d3.scaleLinear().domain([0, 1]).range([vp.height, 0]);
 
-    var num_pts = 10000;
+    var num_pts = 1000000;
 
     //Generate data points
     var data = [];
